--- a/.github/workflows/leaves.yml
+++ b/.github/workflows/leaves.yml
@@ -27,15 +27,14 @@ jobs:
         git config --global user.email "ci@leavesmc.top"
         git config --global user.name "Leaves CI"
     - name: Apply Patches
-      uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
-      with:
-        arguments: applyPatches
+      run: ./gradlew applyPatches
     - name: Create Paperclip Jar
-      uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+      run: ./gradlew createReobfPaperclipJar
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
       with:
-        arguments: createReobfPaperclipJar
-    - name: Get Release Info
-      run: sh scripts/GetReleaseInfo.sh
+        name: ${{ env.jar }}
+        path: ${{ env.jar }}
     - name: Create Release
       if: "!contains(github.event.commits[0].message, '[release-skip]')"
       uses: ncipollo/release-action@v1.12.0
@@ -47,8 +46,3 @@ jobs:
         prerelease: ${{ env.pre }}
         token: ${{ secrets.GITHUB_TOKEN }}
         makeLatest: ${{ env.make_latest }}
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ env.jar }}
-        path: ${{ env.jar }}
